{
    "name": "IA_Player",
    "maps": [
        {
            "name": "Main",
            "id": "ff304bbb-9e3d-458e-8121-2aa7b6a51931",
            "actions": [
                {
                    "name": "SelectLocation",
                    "type": "Button",
                    "id": "79825912-46b7-49b9-97e6-ee6aa7bfd5c6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "CursorPosition",
                    "type": "Value",
                    "id": "ffd091d8-db97-46b8-9ce7-74e7592ff23f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Deselect",
                    "type": "Button",
                    "id": "8f4d4779-dc59-420d-8255-a7be86217a06",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "ConfirmAnswer",
                    "type": "Button",
                    "id": "a6bde02b-9058-4ad4-9e14-7935804dd569",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Debug_Solve",
                    "type": "Button",
                    "id": "e8cce4c0-908b-4ed4-9453-e998d69130b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExitButton",
                    "type": "Button",
                    "id": "65316bec-c0be-4ec7-9b5d-b52e1528e063",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "927a7226-b418-43ed-ba82-c68cec460d37",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectLocation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62a86dcd-6793-4e2a-ab8a-cf147e5cb06f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CursorPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d42a85de-4783-4843-b921-31eb1d2c8004",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Deselect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24280d06-829f-4424-a907-dbba2dfbfc66",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConfirmAnswer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b008e5de-2dab-42a2-8c53-2cab3980b94d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Debug_Solve",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "710fc363-181d-4d8a-b8cb-804b7a54b6b5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}